[gd_scene load_steps=7 format=3 uid="uid://he0fhb7ng1xe"]

[ext_resource type="Script" path="res://levels/scripts/falling_platform.gd" id="1_4p4od"]
[ext_resource type="Texture2D" uid="uid://c7lb07i7dl5w2" path="res://assets/Mini FX, Items & UI/Mini FX, Items & UI/falling-platform-brown.png" id="1_r53ls"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3ewkk"]
size = Vector2(32, 17)

[sub_resource type="Animation" id="Animation_t3mp4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_e8tn7"]
resource_name = "shake"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2, 0), Vector2(0, 0), Vector2(-2, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ep110"]
_data = {
"RESET": SubResource("Animation_t3mp4"),
"shake": SubResource("Animation_e8tn7")
}

[node name="falling-platform" type="AnimatableBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_4p4od")

[node name="texture" type="Sprite2D" parent="."]
texture = ExtResource("1_r53ls")

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_3ewkk")
one_way_collision = true

[node name="respawn_timer" type="Timer" parent="."]

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ep110")
}

[connection signal="timeout" from="respawn_timer" to="." method="_on_respawn_timer_timeout"]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
